samples/_failures_safe/1761127613_9c92cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d538f8a.c: In function ‘main’:
./samples/SAFE/__tmp_6d538f8a.c:177:10: error: ‘t’ undeclared (first use in this function)
  177 |     if (!t
      |          ^
./samples/SAFE/__tmp_6d538f8a.c:177:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6d538f8a.c:177:11: error: expected ‘)’ at end of input
  177 |     if (!t
      |        ~  ^
      |           )
./samples/SAFE/__tmp_6d538f8a.c:177:5: error: expected declaration or statement at end of input
  177 |     if (!t
      |     ^~
